--- a/town_hall/styles/c05x_sorkin.css
+++ b/town_hall/styles/c05x_sorkin.css
@@ -1,4 +1,80 @@
-body {
-	font-family: Arial, Helvetica, sans-serif;
-    font-size: 100%;
+article, aside, figure, footer, header, nav, section {
+
+display: block;
+ 
+}
+
+
+html{
+    background-color: yellow;
+}
+
+body{
+    background-color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 87.5%;
+    width: 600px;
+    margin: auto;
+    border-width: 10px;
+    border-style: double;
+    border-color: blue;
+
+}
+
+body section{
+    margin: 10px;
+}
+
+body footer{
+    margin-left: 20px;
+    margin-right: 20px;
+   
+    margin: 10px;
+    border-top: 3px solid blue;
+      
+}
+
+body header{
+    margin-left: 10px;
+}
+
+blockquote{
+    margin: 10px;
+}
+
+p{
+    margin: 10px;
+}
+
+h1{
+    margin: 10px;
+    font-size: 150%; 
+    color: blue; 
+}
+h2{
+    margin: 10px;
+    font-size: 125%;
+}
+
+img{
+    float: left;
+    margin:10px;
+}
+cite{
+    text-align: right; 
+    display: block;
+    color: blue;
+    font-style: normal;
+}
+
+p cite{
+    text-align: right;
+    margin-bottom: 0.75em;
+   
+}
+
+footer p{
+    font-size: 90%;
+    font-weight: bold;
+    text-align: center;
 }
